# jperipheral

./: NOTICE.txt  README.md  nbactions.xml  pom.xml
buildinjava/libraries/: nblibraries.properties
buildinjava/netbeans/: build.xml
buildinjava/netbeans/nbproject/: build-impl.xml  findbugs.settings  genfiles.properties  project.properties  project.xml
buildinjava/source/: logback.xml
cpp/: CMakeLists.txt  pom.xml  post-build.bat
cpp/src/main/cpp/: CMakeLists.txt  post-build.bat
cpp/src/main/cpp/windows/include/jperipheral/: SerialPortHelper.h  Worker.h
cpp/src/main/cpp/windows/source/jperipheral/: Main.cpp  SerialPortHelper.cpp  SerialPort_Channel.cpp  Worker.cpp
cpp/windows/include/jperipheral/: SerialPortHelper.h  Worker.h
cpp/windows/msvc/: JPeripheral.sln
cpp/windows/msvc/JPeripheral/: JPeripheral.vcproj
cpp/windows/msvc/Main/: Main.cpp  Main.vcproj
cpp/windows/source/jperipheral/: CanonicalSerialPort.cpp  Main.cpp  SerialPort.cpp  SerialPortHelper.cpp  SerialPort_Channel.cpp  SerialPort_Channel_SerialFuture.cpp  WindowsOS.cpp  Worker.cpp
java/: nb-configuration.xml  nbactions-windows-i386-vs10-debug.xml  nbactions.xml  pom.xml
java/libraries/: nblibraries.properties
java/netbeans/: build.xml
java/netbeans/nbproject/: build-impl.xml  genfiles.properties  project.properties  project.xml
java/netbeans/nbproject/configs/: amd64.debug.properties  amd64.release.properties  i386.debug.properties  i386.release.properties
java/source/: logback.xml
java/source/jperipheral/: AsynchronousByteChannelTimeouts.java  AsynchronousByteCharChannel.java  AsynchronousCharChannel.java  AsynchronousSerialChannel.java  BufferHelper.java  CanonicalSerialPort.java  ComPort.java  GuiceModule.java  LinuxOS.java  Main.java  OperatingSystem.java  Peripheral.java  PeripheralInUseException.java  PeripheralNotFoundException.java  Peripherals.java  PortInUseException.java  PortNotFoundException.java  ReferenceCounted.java  ResourceLifecycleListener.java  SerialChannel.java  SerialPort.java  SerialPortProvider.java  SerialPortReference.java  SerialPorts.java  WindowsOS.java
java/source/jperipheral/nio/channels/: AsynchronousByteChannel.java  AsynchronousChannel.java  CompletionHandler.java  InterruptedByTimeoutException.java  ReadPendingException.java  ShutdownChannelGroupException.java  WritePendingException.java
java/src/main/java/org/jperipheral/: Main.java  (+24 more)
java/src/main/resources/: logback.xml
(+15 files in other folders)
